Atualizações nos arquivos graficos.html, index.html e calculadora.html

--- a/repo-sprint2/site/Dashboard/graficos.html
+++ b/repo-sprint2/site/Dashboard/graficos.html
@@ -156,23 +156,23 @@
         <div class="dados">
           <span>1</span>
           <span>Principal</span>
-          <span>10/10/2024</span>
+          <span>09/10/2024</span>
           <span>09:30</span>
-          <span>Em Zona de Alerta</span>
+          <span>Limite Excedido</span>
         </div>
         <div class="dados">
           <span>2</span>
           <span>Principal</span>
-          <span>10/10/2024</span>
+          <span>111/10/2024</span>
           <span>10:30</span>
           <span>Limite Excedido</span>
         </div>
         <div class="dados">
           <span>3</span>
           <span>Principal</span>
-          <span>10/10/2024</span>
+          <span>13/10/2024</span>
           <span>12:30</span>
-          <span>Dentro do Padrão</span>
+          <span>Limite Excedido</span>
         </div>
       </section>
     </div>
