--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -108,6 +108,7 @@
                         </div>
                         <div class="estufa_icone ">
                             <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                            <img src="../assets/img/Dashboard/danger.svg" alt="">
                         </div>
                     </div>
                 </a>
