alterando as validações de responsavel e senha

--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -189,9 +189,9 @@ function validarResponsavel() {
         mensagem += "O nome do responsável não pode conter números.  <b>Por favor, remova os dígitos numéricos.</b> <br>";
         correto = false;
     } 
-    else if (tamanho_responsavel < 3) {
+    else if (tamanho_responsavel <= 3) {
         input_responsavel.style.borderColor = "red";
-        mensagem += "O nome do responsável deve ter pelo menos 10 caracteres. <b>Você digitou " + tamanho_responsavel + " caracteres. </b><br>";
+        mensagem += "O nome do responsável deve ter pelo menos 3 caracteres. <b>Você digitou " + tamanho_responsavel + " caracteres. </b><br>";
         correto = false;
     } else {
         input_responsavel.style.borderColor = "green";
