--- a/repo-sprint2/site/Dashboard/index.html
+++ b/repo-sprint2/site/Dashboard/index.html
@@ -94,7 +94,7 @@
                         <img src="../assets/img/Dashboard/danger_green.svg" alt="" class="img_sino">
                     </div>
                     <div class="kpi_dado">
-                        <h2>2</h2>
+                        <h2>3</h2>
                     </div>
 
                 </div>
@@ -107,7 +107,7 @@
                             <h2 id="h2_temperatura_real" >20°C</h2>
                         </div>
                         <div class="estufa_icone ">
-                            <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
+                            <!-- <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro"> -->
                             <img src="../assets/img/Dashboard/danger.svg" alt="">
                         </div>
                     </div>
