--- a/repo-sprint2/site/cadastro.html
+++ b/repo-sprint2/site/cadastro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/cadastro.css">
     <style>
         #div_mensagem {
+            font-size: 20px;
             text-align: center;
             margin-bottom: 10px;
             color: red;
@@ -263,7 +264,7 @@ function validarResponsavel() {
     } 
     if (!possui_arroba || (!termina_com && !termina_br && !termina_school)) {
     input_email.style.borderColor = "red";
-    mensagem += "Certifique-se de que o e-mail contém '@' e termina com '.com', '.br' ou '.school'.<br>";
+    //mensagem += "Certifique-se de que o e-mail contém '@' e termina com '.com', '.br' ou '.school'.<br>";
     correto = false;
     }
     else {
