--- a/repo-sprint2/site/missao.html
+++ b/repo-sprint2/site/missao.html
@@ -86,7 +86,7 @@
 
                 <div class="card">
                     <div class="descricao">
-                        <p>Facilitar a o controle na plantação</p>
+                        <p>Facilitar o controle de temperatura na plantação</p>
                         <span>
                             Sabemos que o cultivo de wasabi exige grande cuidado e atenção. Por isso, queremos tornar esse processo mais simples, utilizando tecnologia para monitorar a temperatura em tempo real e avisar o usuário sempre que necessário.
                         </span>
