--- a/repo-sprint2/site/sobre-ondo.html
+++ b/repo-sprint2/site/sobre-ondo.html
@@ -55,21 +55,31 @@
 
             <h2 id="titulo-sobre">Sobre a ONDO</h2>
             <p id="paragrafo-sobre">
-                Um grupo de estudantes da area de tecnologia, recebe um desafio: Criar um projeto, mas não poderia ser
+                <b>Bem-vindo à ONDO</b><br><br>
+
+                Somos um grupo de especialistas em tecnologia que se uniu para enfrentar um desafio ambicioso: criar soluções inovadoras para o cultivo de wasabi. E assim nasceu a ONDO, uma empresa dedicada a transformar o mundo da agricultura com tecnologia avançada e compromisso total com nossos clientes.
+                <!-- Um grupo de estudantes da area de tecnologia, recebe um desafio: Criar um projeto, mas não poderia ser
                 qualquer projeto, foi então que criaram a ONDO! Uma empresa de tecnologia voltada a agricultura e
                 cultivo, especializada em desenvolver e implementar soluções inovadoras para o cultivo de wasabi
                 Focando no monitoramento da temperatura e trazer dados que te ajude a tomar as melhores decições e
-                administrar melhor sua plantação.
+                administrar melhor sua plantação. -->
             </p>
             <p id="paragrafo-sobre">
-                Acreditamos que trilhando um caminho e facilitando o controle de temperatura facilitamos o cultivo, e
+                <b>Nossa Missão</b><br><br>
+
+                Na ONDO, focamos no monitoramento da temperatura e fornecimento de dados que auxiliam na tomada de decisões, permitindo que você administre sua plantação de maneira mais eficiente. Acreditamos que, ao facilitar o controle de temperatura, estamos não apenas otimizando o cultivo, mas também garantindo maiores lucros para os produtores e melhores produtos para os consumidores.
+                <!-- Acreditamos que trilhando um caminho e facilitando o controle de temperatura facilitamos o cultivo, e
                 todos saem ganhando, trazendo maiores lucros para o produtor e maiores demandas para os consumidores
-                final
+                final -->
             </p>
             <p id="paragrafo-sobre">
-                Temos uma equipe esforçada e totalmente dedicada aos nossos clientes e que estão dia e noite,
+                <b>Nossa Equipe</b><br><br>
+
+                Contamos com uma equipe altamente dedicada e motivada, trabalhando dia e noite para oferecer as melhores soluções para você. Nosso objetivo é garantir que você não fique para trás no competitivo mercado agrícola.
+
+                <!-- Temos uma equipe esforçada e totalmente dedicada aos nossos clientes e que estão dia e noite,
                 trabalhando para trazer o melhor para voce! Não fique para trás, coloque o sistema de controle ONDO em
-                sua plantação de wasabi!
+                sua plantação de wasabi! -->
             </p>
         </div>
     </section>
