alteracoes de port e concordancia verbal tela projeto

--- a/repo-sprint2/site/projeto.html
+++ b/repo-sprint2/site/projeto.html
@@ -64,7 +64,7 @@
 
         <div class="container_texto">
           <span>
-            Nosso projeto é implantado dentro da estufa de wasabi, onde coletará dados de temperatura continuamente. Essas informações permitirão que nosso cliente tome decisões assertivas para o gerenciamento da temperatura do ambiente. Utilizamos sensores de temperatura para coletar esses dados e criar gráficos informativos. Nosso sistema gera avisos e notificações, indicando se a temperatura está dentro dos parâmetros desejados. Será disponibilizado também uma calculadora para simular o lucro relacionado ao cultivo de wasabi.
+            Nosso projeto é implantado dentro da estufa de wasabi, que coleta dados de temperatura continuamente. Essas informações permitirão que nosso cliente tome decisões assertivas para o gerenciamento da temperatura do ambiente. Utilizamos sensores de temperatura para coletar esses dados e criar gráficos informativos, onde o sistema gerará avisos e notificações, indicando se a temperatura está dentro dos parâmetros desejados. Será disponibilizado também uma calculadora para simular o lucro relacionado ao cultivo de wasabi.
           </span>
         </div>
       </div>
