erros de portu pg contato

--- a/repo-sprint2/site/fale-conosco.html
+++ b/repo-sprint2/site/fale-conosco.html
@@ -61,7 +61,7 @@
     <section class="fale-conosco">
       <div class="container">
         <h1>Fale conosco</h1>
-        <p>Estamos disponíveis através do telefone, WhatsApp ou formulário digital de segunda a sexta, das 8h até 17h.
+        <p>Estamos disponíveis através do telefone, WhatsApp ou formulário digital, de segunda a sexta, das 8h às 17h.
         </p>
       </div>
     </section>
@@ -78,7 +78,7 @@
         <p id="redes-sociais">Whatsapp: +55 11 123456789</p>
       </div>
       <div class="coluna-contato">
-        <span id="titulo-contato">Para comprar nosso sistema</span>
+        <span id="titulo-contato">Para obter nosso sistema</span>
         <p>ondoVendas@agro.com</p>
         <p>+55 11 99999-9999</p>
         <p id="redes-sociais">Em todas as redes sociais: @ONDO</p>
