--- a/repo-sprint2/site/index.html
+++ b/repo-sprint2/site/index.html
@@ -69,8 +69,12 @@
             <img src="https://images.stockcake.com/public/c/8/7/c879d106-74a4-44ab-8f1a-47a1d37d505a/team-high-five-stockcake.jpg" alt="Sobre a ONDO" class="card-image">
             <div class="card-content">
                 <p id="titulo-conteudo">Sobre a ONDO</p>
-                <p id="card-texto-conteudo">Um grupo de estudantes com um desafio: criar um projeto. Amantes da culinária japonesa e envolvidos
-                    na tecnologia. Conheça a ONDO.</p>
+
+                <p id="card-texto-conteudo">Especialistas em tecnologia unidos para criar soluções inovadoras no cultivo de wasabi. <br>
+                Conheça a <b>ONDO.</b> </p> 
+
+               <!-- <p id="card-texto-conteudo">Um grupo de estudantes com um desafio: criar um projeto. Amantes da culinária japonesa e envolvidos
+                    na tecnologia. Conheça a ONDO.</p>  -->
                     <a href="./sobre-ondo.html">
                         <button  class="btn-conheca">CONHEÇA</button>
                     </a>
@@ -81,7 +85,7 @@
             <img src="https://images.stockcake.com/public/2/d/d/2dd29475-9650-4e00-8e04-c494a5e42837/drone-over-plants-stockcake.jpg" alt="Nossa missão" class="card-image">
             <div class="card-content">
                 <p id="titulo-conteudo">Nossa missão</p>
-                <p id="card-texto-conteudo">Simplificar o controle de temperatura das plantações de wasabi. Quer saber como e por quê? Descubra <b>nossa missão</b>.</p>
+                <p id="card-texto-conteudo">Simplificar o controle de temperatura das plantações de wasabi. Quer saber como e por quê? Descubra <b>Nossa Missão</b>.</p>
                 <a href="./missao.html">
                     <button class="btn-conheca">VER MAIS</button>
                 </a>
