Implantando a dashboard na api

--- a/repo-sprint3/site/web-data-viz-main/public/dashboard/dashboard.html
+++ b/repo-sprint3/site/web-data-viz-main/public/dashboard/dashboard.html
@@ -9,8 +9,8 @@
     <title>AquaTech | Dashboards</title>
 
     
-    <link rel="stylesheet" href=".//../css/dashboards.css">
-    <link rel="stylesheet" href=".//../css/estilo.css" />
+    <link rel="stylesheet" href="../css/dashboards.css">
+    <link rel="stylesheet" href="../css/estilo.css" />
     <script src="../js/sessao.js"></script>
     <script src="./../js/alerta.js"></script>
 
