--- a/repo-sprint3/site/web-data-viz-main/public/dashboard/mural.html
+++ b/repo-sprint3/site/web-data-viz-main/public/dashboard/mural.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaTech | Avisos</title>
 
-    <link rel="stylesheet" href=".//../css/dashboards.css">
-    <link rel="stylesheet" href=".//../css/estilo.css" />
+    <link rel="stylesheet" href="../css/dashboards.css">
+    <link rel="stylesheet" href="../css/estilo.css" />
     <script src="../js/sessao.js"></script>
     <script src="./../js/alerta.js"></script>
 
