--- a/repo-sprint3/site/web-data-viz-main/public/dashboard/graficos.html
+++ b/repo-sprint3/site/web-data-viz-main/public/dashboard/graficos.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="menuLateral.css">
-  <link rel="stylesheet" href="././assets/css/style.css">
+  <!-- <link rel="stylesheet" href="../css/dashboards.css"> -->
+  <link rel="stylesheet" href="../css/style.css">
+
   <link rel="stylesheet" href="dashboard.css">
-  <link rel="stylesheet" href="graficos.css">
+  <link rel="stylesheet" href="menuLateral.css">
+  <link rel="stylesheet" href="graficos.css" />
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
