--- a/repo-sprint3/site/web-data-viz-main/public/dashboard/index.html
+++ b/repo-sprint3/site/web-data-viz-main/public/dashboard/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./menuLateral.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="./dashboard.css">
+    <link rel="stylesheet" href="menuLateral.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="dashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <title>Dashboard</title>
 </head>
@@ -118,8 +119,6 @@
                         <h2>20°C</h2>
                     </div>
                     <div class="estufa_icone" id="div_icones">
-                        <!-- <img src="../assets/img/Dashboard/TempAlta.svg" alt="" > -->
-                        
                         <img src="../assets/img/Dashboard/danger.svg" alt="">
                     </div>
                 </div>
@@ -134,60 +133,6 @@
                         <img src="../assets/img/Dashboard/danger.svg" alt="">
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 4</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div> -->
-                <!-- <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 5</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 6</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 7</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 8</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="" class="termometro">
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="kpi_titulo">
-                        <span>Estufa 9</span>
-                        <h2>20°C</h2>
-                    </div>
-                    <div class="estufa_icone">
-                        <img src="../assets/img/Dashboard/termometro.svg" alt="">
-                    </div>
-                </div> -->
             </div>
 
         </div>
