--- a/repo-sprint3/site/web-data-viz-main/public/cadastro-teste.html
+++ b/repo-sprint3/site/web-data-viz-main/public/cadastro-teste.html
@@ -136,51 +136,118 @@
         var logradouroVar = input_logradouro.value;
         var cidadeVar = input_cidade.value;
         var estadoVar = input_estado.value;
-        var idEmpresaVincular = null;
+        var idEmpresaVincular 
 
-        // Verificação do código de ativação da empresa (caso necessário)
-        for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
-            if (listaEmpresasCadastradas[i].codigo_ativacao === "codigoVar") {  // Aqui "codigoVar" é apenas um exemplo; substitua conforme necessário.
-                idEmpresaVincular = listaEmpresasCadastradas[i].id;
-                console.log("Código de ativação válido.");
-                break;
-            }
-        }
+         // Verificando se há algum campo em branco
+    if (
+      cnpjVar == "" ||
+      razao_socialVar == "" ||
+      senhaVar == "" ||
+      nome_fantasiaVar == "" ||
+      responsavelVar == "" ||
+      emailVar == "" ||
+      senhaVar == "" ||
+      cepVar == "" ||
+      bairroVar == "" ||
+      logradouroVar == "" ||
+      cidadeVar == "" ||
+      estadoVar == "" 
+    ) {
+      cardErro.style.display = "block";
+      mensagem_erro.innerHTML =
+        "(Mensagem de erro para todos os campos em branco)";
 
-        // Enviando os dados para o servidor
-        fetch("/usuarios/cadastrar", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                cnpj: cnpjVar,
-                razao_social: razao_socialVar,
-                nome_fantasia: nome_fantasiaVar,
-                responsavel: responsavelVar,
-                email: emailVar,
-                senha: senhaVar,
-                cep: cepVar,
-                bairro: bairroVar,
-                logradouro: logradouroVar,
-                cidade: cidadeVar,
-                estado: estadoVar,
-                idEmpresaVincular: idEmpresaVincular
-            }),
-        })
-        .then(function (resposta) {
-            if (resposta.ok) {
-                console.log("Cadastro realizado com sucesso!");
-                div_mensagem.innerHTML = "<span style='color: green;'>Cadastro realizado com sucesso!</span>";
-            } else {
-                div_mensagem.innerHTML = "<span style='color: red;'>Erro ao cadastrar. Tente novamente.</span>";
-            }
-        })
-        .catch(function (erro) {
-            console.error("Erro:", erro);
-            div_mensagem.innerHTML = "<span style='color: red;'>Erro ao conectar ao servidor.</span>";
-        });
+      finalizarAguardar();
+      return false;
+    } else {
+      setInterval(sumirMensagem, 5000);
     }
+
+
+        // // Verificação do código de ativação da empresa (caso necessário)
+        // for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
+        //     if (listaEmpresasCadastradas[i].codigo_ativacao === "codigoVar") {  // Aqui "codigoVar" é apenas um exemplo; substitua conforme necessário.
+        //         idEmpresaVincular = listaEmpresasCadastradas[i].id;
+        //         console.log("Código de ativação válido.");
+        //         break;
+        //     }
+        // }
+
+         // Enviando o valor da nova input
+    fetch("/usuarios/cadastrar", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        // crie um atributo que recebe o valor recuperado aqui
+        // Agora vá para o arquivo routes/usuario.js
+        cnpjServer: cnpjVar,
+        razao_socialServer: razao_socialVar,
+        nome_fantasiaServer: nome_fantasiaVar ,
+        input_responsavelServer: responsavelVar  ,
+        emailServer: emailVar  ,
+        senhaServer: senhaVar ,
+        cepServer: cepVar  ,
+        bairroServer: bairroVar     ,
+        logradouroServer: logradouroVar  ,
+        cidadeServer: cidadeVar  ,
+        estadoServer: estadoVar   ,
+
+        idEmpresaVincularServer: idEmpresaVincular
+      }),
+    })
+      .then(function (resposta) {
+        console.log("resposta: ", resposta);
+
+        if (resposta.ok) {
+          cardErro.style.display = "block";
+
+          mensagem_erro.innerHTML =
+            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+
+          setTimeout(() => {
+            window.location = "login.html";
+          }, "2000");
+
+          limparFormulario();
+          finalizarAguardar();
+        } else {
+          throw "Houve um erro ao tentar realizar o cadastro!";
+        }
+      })
+      .catch(function (resposta) {
+        console.log(`#ERRO: ${resposta}`);
+        finalizarAguardar();
+      });
+
+    return false;
+  }
+
+  // Listando empresas cadastradas 
+  function listar() {
+    fetch("/empresas/listar", {
+      method: "GET",
+    })
+      .then(function (resposta) {
+        resposta.json().then((empresas) => {
+          empresas.forEach((empresa) => {
+            listaEmpresasCadastradas.push(empresa);
+
+            console.log("listaEmpresasCadastradas")
+            console.log(listaEmpresasCadastradas[0].codigo_ativacao)
+          });
+        });
+      })
+      .catch(function (resposta) {
+        console.log(`#ERRO: ${resposta}`);
+      });
+  }
+
+  function sumirMensagem() {
+    cardErro.style.display = "none";
+  }
+    
     function ocultar (){
         div_form1.style.display = 'none';
         div_form2.style.display = 'flex';
