alterando ordem da tabela empresa do BD

--- a/repo-sprint3/site/web-data-viz-main/public/cadastro.html
+++ b/repo-sprint3/site/web-data-viz-main/public/cadastro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="assets/css/cadastro.css">
+    <link rel="stylesheet" href="css/cadastro.css">
     <style>
         #div_mensagem {
             text-align: center;
@@ -130,6 +130,9 @@
         if (correto) {
            alert("Usuário cadastrado com sucesso!");
         
+        }
+        else{
+            alert("Erro ao cadastrar o usuário");
         }
 
        
