--- a/repo-sprint3/site/web-data-viz-main/public/cadastro.html
+++ b/repo-sprint3/site/web-data-viz-main/public/cadastro.html
@@ -65,6 +65,9 @@
                 <div class="form-group">
                     <input class="endereco-input" id="input_logradouro" placeholder="Logradouro" type="text"  oninput="validarRua()" />
                 </div>
+                <div class="form-group">
+                    <input class="endereco-input" id="input_numero" placeholder="Numero" type="text"  oninput="validarNumero()" />
+                </div>
                 <div class="form-group">                    
                     <input class="endereco-input" id="input_cidade" placeholder="Cidade" type="text" oninput="validarCidade()" />
                 </div>
@@ -126,6 +129,7 @@
         validarBairro();
         validarRua();
         validarCidade();
+        validarNumero()
 
         if (correto) {
            alert("Usuário cadastrado com sucesso!");
@@ -151,6 +155,7 @@
         var logradouroVar = input_logradouro.value;
         var cidadeVar = input_cidade.value;
         var estadoVar = input_estado.value;
+        var numeroVar = input_numero.value
         
 
        
@@ -499,6 +504,20 @@ function validarRua() {
     } else {
         input_logradouro.style.borderColor = "green";
         mensagem += "<span style='color: green;'>Rua válida</span>";
+    }
+    div_mensagem.innerHTML = mensagem;
+}
+function validarNumero() {
+    var mensagem = "";
+    var numero = input_numero.value;
+
+    if (numero.length <= 0) {
+        input_numero.style.borderColor = "red";
+        mensagem += "Por favor, insira um número. <br>";
+        correto = false;
+    } else {
+        input_numero.style.borderColor = "green";
+        mensagem += "<span style='color: green;'>Número válido</span>";
     }
     div_mensagem.innerHTML = mensagem;
 }
