--- a/repo-sprint3/site/web-data-viz-main/public/dashboard/graficos.html
+++ b/repo-sprint3/site/web-data-viz-main/public/dashboard/graficos.html
@@ -27,7 +27,7 @@
           <div class="container_img">
             <img src="../assets/img/Dashboard/House_branco.svg" alt="">
           </div>
-          <a href="./cardsold.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
         <li class="menu_item select">
           <div class="container_img disable" style="height: 25px;">
@@ -61,8 +61,8 @@
   <main class="grafico_dashboard">
     <div class="boasVindas">
       <div class="container">
-        <h3>Graficos - Estufa 1</h3>
-        <h5>Bem vindo, Frizza</h5>
+        <h3>Inicio</h3>
+        <h5>Bem vindo, <b id="b_usuario"></b></h5>
       </div>
     </div>
     <div class="content">
@@ -188,6 +188,8 @@
   const graficoBarra = document.getElementById("grafico_barra");
   const graficoLinha = document.getElementById("grafico_linha");
   const graficoPizza = document.getElementById("grafico_pizza");
+
+  b_usuario.innerHTML = sessionStorage.NOME_RESPONSAVEL;
 
   new Chart(graficoBarra, {
     type: "bar",
