configuração de login

--- a/repo-sprint3/site/ondo/public/login.html
+++ b/repo-sprint3/site/ondo/public/login.html
@@ -182,7 +182,8 @@
           console.log(JSON.stringify(json));
           sessionStorage.EMAIL_USUARIO = json.email;
           sessionStorage.NOME_RESPONSAVEL = json.responsavel;
-          sessionStorage.ID_USUARIO = json.id;
+          sessionStorage.ID_USUARIO = json.idUsuario;
+          sessionStorage.ID_EMPRESA = json.idEmpresa;
           sessionStorage.ESTUFA = JSON.stringify(json.estufa)
 
           setTimeout(function () {
