--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -27,7 +27,7 @@
           <div class="container_img">
             <img src="../assets/img/Dashboard/House_branco.svg" alt="">
           </div>
-          <a href="./cardsold.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
         <li class="menu_item select">
           <div class="container_img disable" style="height: 25px;">
