--- a/repo-sprint3/site/ondo/public/dashboard/index.html
+++ b/repo-sprint3/site/ondo/public/dashboard/index.html
@@ -46,6 +46,13 @@
                     <a href="notificacao.html">Notificação</a>
                 </li>
 
+                <li class="menu_item">
+                    <div class="container_img ">
+                        <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
+                    </div>
+                    <a href="bobIA.html">BobIA</a>
+                </li>
+
                 <li class="menu_item disable">
                     <div class="container_img ">
                         <img src="../assets/img/Dashboard/info_branco.svg" alt="">
