--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -20,44 +20,44 @@
 <body onload="buscarTemperaturaMaxima(), buscarTemperaturaMinima(), buscarQuantidadeAlerta(),
 obterDadosGraficoBarraAlertaBaixo(barraAlertaAbaixo), obterDadosGraficoBarraAlertaAcima(barraAlertaAcima),
 buscarMensagemAlerta()">
-  <header class="menu_dashboard">
-    <nav class="menuLateral">
-      <img src="../assets/img/logo_branco.png" alt="">
-      <ul class="container_lista">
-        <li class="menu_item">
-          <div class="container_img">
-            <img src="../assets/img/Dashboard/House_branco.svg" alt="">
-          </div>
-          <a href="./index.html">Home</a>
-        </li>
-        <li class="menu_item select">
-          <div class="container_img disable" style="height: 25px;">
-            <img src="../assets/img/Dashboard/chart-line-solid_verde.svg" alt="">
-          </div>
-          <a href="graficos.html">Graficos</a>
-        </li>
-        <li class="menu_item disable">
-          <div class="container_img disable">
-            <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
-          </div>
-          <a href="notificacao.html">Notificação</a>
-        </li>
+    <header class="menu_dashboard">
+      <nav class="menuLateral">
+          <img src="../assets/img/logo_branco.png" alt="">
+          <ul class="container_lista">
+              <li class="menu_item">
+                  <div class="container_img">
+                      <img src="../assets/img/Dashboard/House_branco.svg" alt="">
+                  </div>
+                  <a href="./index.html">Home</a>
+              </li>
+              <li class="menu_item select">
+                  <div class="container_img " style="height: 25px;">
+                      <img src="../assets/img/Dashboard/chart-line-solid_verde.svg" alt="">
+                  </div>
+                  <a href="graficos.html">Graficos</a>
+              </li>
+              <li class="menu_item">
+                  <div class="container_img ">
+                      <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
+                  </div>
+                  <a href="bobIA.html">BobIA</a>
+              </li>
 
-        <li class="menu_item disable">
-          <div class="container_img disable">
-            <img src="../assets/img/Dashboard/info_branco.svg" alt="">
-          </div>
-          <a href="help.html">Ajuda e Suporte</a>
-        </li>
+              <li class="menu_item disable">
+                  <div class="container_img ">
+                      <img src="../assets/img/Dashboard/info_branco.svg" alt="">
+                  </div>
+                  <a href="help.html">Ajuda e Suporte</a>
+              </li>
 
-        <li class="menu_item disable">
-          <div class="container_img disable">
-            <img src="../assets/img/Dashboard/sair.svg" alt="">
-          </div>
-          <a href="../index.html">Sair</a>
-        </li>
-      </ul>
-    </nav>
+              <li class="menu_item">
+                  <div class="container_img ">
+                      <img src="../assets/img/Dashboard/sair.svg" alt="">
+                  </div>
+                   <span onclick="limparSessao()">Sair</span>
+              </li>
+          </ul>
+      </nav>
   </header>
   <main class="grafico_dashboard">
     <div class="boasVindas">
