--- a/repo-sprint3/site/ondo/public/dashboard/index.html
+++ b/repo-sprint3/site/ondo/public/dashboard/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AquaTech | Tempo Real</title>
+    <title>ONDO | Estufas</title>
     <link rel="stylesheet" href="../css/style.css">
 
     <link rel="stylesheet" href="dashboard.css">
@@ -38,14 +38,7 @@
                     </div>
                     <a href="graficos.html">Graficos</a>
                 </li>
-                <li class="menu_item disable">
-                    <div class="container_img ">
-                        <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
-                    </div>
-                    <a href="notificacao.html">Notificação</a>
-                </li>
-
-                <li class="menu_item">
+                <li class="menu_item" id="li_bobIA">
                     <div class="container_img ">
                         <img src="../assets/img/Dashboard/bell-regular_branco.svg" alt="">
                     </div>
@@ -130,7 +123,11 @@
 </body>
 
 <script>
-
+    function menuAdm(){
+        if(sessionStorage.ID_USUARIO == 4){
+            
+        }
+    }
 
     function buscarQTDEstufas(){
         fetch(`/home/estufas-monitoradas/${sessionStorage.ID_EMPRESA}`, {
