adicionando botão de suporte na tela graficos

--- a/repo-sprint3/site/ondo/public/dashboard/index.html
+++ b/repo-sprint3/site/ondo/public/dashboard/index.html
@@ -26,6 +26,7 @@
         <nav class="menuLateral">
             <img src="../assets/img/logo_branco.png" alt="">
             <ul class="container_lista">
+                
                 <li class="menu_item select">
                     <div class="container_img">
                         <img src="../assets/img/Dashboard/House_verde.svg" alt="">
@@ -114,8 +115,7 @@
             </div>
         </div>
         <div class="content">
-            <script data-jsd-embedded data-key="72170b6e-c6b9-4e8e-9ef5-c38ca60baaf3" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
-            <div class="kpi_cards">
+<script data-jsd-embedded data-key="72170b6e-c6b9-4e8e-9ef5-c38ca60baaf3" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>            <div class="kpi_cards">
                 <div class="card">
                     <div class="kpi_titulo">
                         <span>Estufas monitoradas</span>
