--- a/repo-sprint3/site/ondo/public/dashboard/graficos.html
+++ b/repo-sprint3/site/ondo/public/dashboard/graficos.html
@@ -67,6 +67,7 @@ buscarMensagemAlerta()">
       </div>
     </div>
     <div class="content">
+      <script data-jsd-embedded data-key="72170b6e-c6b9-4e8e-9ef5-c38ca60baaf3" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
       <div class="kpi_cards">
         <div class="card">
           <div class="kpi_titulo">
